TimeseriesLink feature control - improved labeling of time series links

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -288,10 +288,10 @@ ChooseTimeseriesDialog_1=Suche
 ChooseTimeseriesDialog_0=W\u00E4hle Zeitreihe
 TextSearchFilterControl_0=Suchtext
 ChooseZmlLinkFeatureViewControl_6=%s
-ChooseZmlLinkFeatureViewControl_5=%s, 
+ChooseZmlLinkFeatureViewControl_5=%s - 
 EditNetRelationsTaskHandler_0=Lade Karte...
 EditRelationUtils_0=<keine>
-ChooseZmlLinkFeatureViewControl_3=%s, 
+ChooseZmlLinkFeatureViewControl_3=%s - 
 ChooseZmlLinkFeatureViewControl_2=<leer>
 ChooseZmlLinkFeatureViewControl_1=Konnte 'stations.gml' nicht finden
 ChooseZmlLinkFeatureViewControl_0=Error
