--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -213,7 +213,7 @@ org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.12=Erzeuge Hydro
 org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.11=Hydrotope konnten nicht gespeichert werden
 org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.10=Hydrotope konnten nicht gespeichert werden
 ValidateTimestepsVisitor_2=Zeitschritt \u00DCberpr\u00FCfung
-ValidateTimestepsVisitor_1=Ung\u00FCltiger Zeitschritt entdeckt \u2013 zwischen %s und %s
+ValidateTimestepsVisitor_1=Lücke in Zeitreihe \u2013 zwischen %s und %s
 ValidateTimestepsVisitor_0=dd.MM.yy HH\:mm
 ExtendTimeseriesAction_1=Erweitere gew\u00E4hlte Zeitreihe
 ExtendTimeseriesAction_0=Erweitere Zeitreihe
