--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -213,7 +213,7 @@ org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.12=Create Hydrot
 org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.11=Failed to save hydrotopes
 org.kalypso.ui.rrm.internal.hydrotops.RRMCreateHydrotopsHandler.10=Failed to save hydrotopes
 ValidateTimestepsVisitor_2=Time Step Validation Status
-ValidateTimestepsVisitor_1=Invalid time step detected - between %s and %s
+ValidateTimestepsVisitor_1=Gap (missing values) in timeseries detected - between %s and %s
 ValidateTimestepsVisitor_0=dd.MM.yy HH\:mm
 ExtendTimeseriesAction_1=Extend selected Timeseries
 ExtendTimeseriesAction_0=Extend Timeseries
