--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -115,7 +115,7 @@ UpdateSimulationWorker.1=Zufluss
 UpdateSimulationWorker.0=Pegel
 ImportTimeseriesOperation_9=Fehler in R\u00FCcksprung-Detektion
 ImportTimeseriesOperation_8=Keine R\u00FCckspr\u00FCnge wurden festgellt.
-ImportTimeseriesOperation_7=R\u00FCcksprung wurde festgestellt.
+ImportTimeseriesOperation_7=R\u00FCcksprung wurde festgestellt - %s.
 ImportTimeseriesOperation_6=Fehler bei \u00DCberpr\u00FCfung des Zeitschritts.
 ImportTimeseriesOperation_5=Importiere Zeitreihe Verarbeitung
 ImportTimeseriesOperation_4=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Fehlerhafter Zeitschritt.
