time series import: improved validation error messages

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -115,7 +115,7 @@ UpdateSimulationWorker.1=Inflow
 UpdateSimulationWorker.0=Water level
 ImportTimeseriesOperation_9=Error in R\u00FCcksprung detection.
 ImportTimeseriesOperation_8=No R\u00FCcksprung detected.
-ImportTimeseriesOperation_7=R\u00FCcksprung detected.
+ImportTimeseriesOperation_7=R\u00FCcksprung detected at %s.
 ImportTimeseriesOperation_6=Error in time step validity detection.
 ImportTimeseriesOperation_5=Import Timeseries Operation
 ImportTimeseriesOperation_4=Import Timeseries Operation failed - Invalid time steps detected.
