--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -5,7 +5,7 @@ EditRelationViewer_0=Modus
 EditRelationOperation_2=Diese Verbindung wirklich l\u00F6schen?
 GroupUiHandler_1=Gruppe
 EditRelationOperation_1=Verbindung hinzuf\u00FCgen
-GroupUiHandler_0=<nicht definierte Gruppe>
+GroupUiHandler_0=<Standardgruppe>
 EditRelationOperation_0=Verbindung l\u00F6schen
 ParameterGeneratorUiHandler_0=Parametertyp
 org.kalypso.ogc.gml.map.widgets.editrelation.RelationType.8=\ ist nicht gesetzt
