Better text for default group

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -5,7 +5,7 @@ EditRelationViewer_0=Mode
 EditRelationOperation_2=Remove this relation?
 GroupUiHandler_1=Group
 EditRelationOperation_1=Add Relation
-GroupUiHandler_0=<undefined group>
+GroupUiHandler_0=<Default Group>
 EditRelationOperation_0=Remove Relation
 ParameterGeneratorUiHandler_0=Parameter Type
 org.kalypso.ogc.gml.map.widgets.editrelation.RelationType.8=\ has not been set
