--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -43,3 +43,5 @@ rhbchannel.modelConstruction.gft.group.additonalOutflow=zusätzliche Abgabe (opti
 
 catchment.modelConstruction.gft.group.groundwaterOutflow=Grundwasser Abgabe
 catchment.modelConstruction.gft.group.tiefenGW=Tiefengrundwasser
+
+editCalibration.gft.group.calibrationParameters=Kalibrierungsparameter
