--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -152,7 +152,7 @@ KalypsoNAProjectWizard_2=Project Template
 DeleteGeneratorAction_0=L\u00F6sche Einzugsgebietmodell(e)
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.18=\r\n nach\:
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.17=Nach
-NewLinearSumIdwAction_0=Neues Einzugsgebietmodell (Lineare Summe) durch Inverse Distanz Gewichtungs-Verfahren
+NewLinearSumIdwAction_0=Neues Gebietsmodell (Lineare Summe) durch Inverse Distanz Gewichtungs-Verfahren
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.11=Von
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.10=Relation
 EditTimeseriesAction_1=Editiere gew\u00E4hlte Zeitreihen
@@ -419,7 +419,7 @@ KalypsoNAProjectWizardPage.CRSLabelText=Koordinatensystem\:
 CompleteNetElementsTaskHandler_2=Einzugsgebiete
 CompleteNetElementsTaskHandler_1=Speicherstrang
 CompleteNetElementsTaskHandler_0=Kalinin-Miljukov Strang
-NewLinearSumThiessenAction_0=Neues Einzugsgebietmodell (Lineare Summe) durch Thiessen Methode
+NewLinearSumThiessenAction_0=Neues Gebietsmodell (Lineare Summe) durch Thiessen Methode
 RefreshSimulationsOperation_6=Fehler beim Speichern der Kontrolldatei der Simulation\: %s
 RefreshSimulationsOperation_5=L\u00F6sche vorhandene Daten
 RefreshSimulationsOperation_4=Aktualisiere Simulation\: %s
@@ -468,7 +468,7 @@ org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.8=Relation
 TimeseriesUiHandler_1=L\u00F6sche Zeitreihe '%s' der Station '%s'
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.6=%s Relationen m\u00F6glich, bitte EINE ausw\u00E4hlen
 HeavyRelationType.3=Verbindung erzeugen
-NewLinearSumGeneratorAction_0=Neues Einzugsgebietmodell (Lineare Summe)
+NewLinearSumGeneratorAction_0=Neues Gebietsmodell (Lineare Summe)
 TimeseriesUiHandler_0=Zeitreihe
 org.kalypso.ogc.gml.map.widgets.editrelation.EditRelationWidget.5=Diese Funktion ist mit dem gleichen Element nicht m\u00F6glich
 HeavyRelationType.2=Bitte w\u00E4hlen Sie aus, welche Art von Verbindung hinzugef\u00FCgt werden soll\:
