NEW - # 59: Die Einschränkung auf den Parameter funktioniert beim ZR-Auswahldialog nicht https://dev.bjoernsen.de/hydrology/ticket/59 CLOSED - # 63: Die Anzeige des ZR-Links zeigt den Stationsnamen nicht an https://dev.bjoernsen.de/hydrology/ticket/63

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -291,7 +291,7 @@ ChooseZmlLinkFeatureViewControl_6=%s
 ChooseZmlLinkFeatureViewControl_5=%s - 
 EditNetRelationsTaskHandler_0=Loading map...
 EditRelationUtils_0=<none>
-ChooseZmlLinkFeatureViewControl_3=%s - 
+ChooseZmlLinkFeatureViewControl_3=%s: 
 ChooseZmlLinkFeatureViewControl_2=<empty>
 ChooseZmlLinkFeatureViewControl_1=Can't resolve stations.gml
 ChooseZmlLinkFeatureViewControl_0=Error
