--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -291,7 +291,7 @@ ChooseZmlLinkFeatureViewControl_6=%s
 ChooseZmlLinkFeatureViewControl_5=%s - 
 EditNetRelationsTaskHandler_0=Loading map...
 EditRelationUtils_0=<none>
-ChooseZmlLinkFeatureViewControl_3=%s - 
+ChooseZmlLinkFeatureViewControl_3=%s: 
 ChooseZmlLinkFeatureViewControl_2=<empty>
 ChooseZmlLinkFeatureViewControl_1=Can't resolve stations.gml
 ChooseZmlLinkFeatureViewControl_0=Error
