--- a/KalypsoModelWspmTuhhCore/src/org/kalypso/model/wspm/tuhh/core/i18n/messages_de.properties
+++ b/KalypsoModelWspmTuhhCore/src/org/kalypso/model/wspm/tuhh/core/i18n/messages_de.properties
@@ -162,3 +162,5 @@ WProfImporter_0=Importiere %s
 BCEShapeWPRofContentProvider_1=Unbekannt
 BCEShapeWPRofContentProvider_0=Attribut '%s' fehlt in Shapedatei.
 CalculationResultConverter_0=L\u00E4ngschnittausgabe fehlt bei Berechnung\: %s (%s)
+org.kalypso.model.wspm.tuhh.core.profile.energyloss.ENERGYLOSS_TYPE.0=Einlauf
+org.kalypso.model.wspm.tuhh.core.profile.energyloss.ENERGYLOSS_TYPE.1=Zusatzverlust
