--- a/trunk/KalypsoModelWspmTuhhCore/src/org/kalypso/model/wspm/tuhh/core/i18n/messages.properties
+++ b/trunk/KalypsoModelWspmTuhhCore/src/org/kalypso/model/wspm/tuhh/core/i18n/messages.properties
@@ -162,3 +162,5 @@ WProfImporter_0=Importing %s
 BCEShapeWPRofContentProvider_1=Unknown
 BCEShapeWPRofContentProvider_0=Missing property '%s' in input shape file.
 CalculationResultConverter_0=Length section missing for calculation\: %s (%s)
+org.kalypso.model.wspm.tuhh.core.profile.energyloss.ENERGYLOSS_TYPE.0=Einlauf
+org.kalypso.model.wspm.tuhh.core.profile.energyloss.ENERGYLOSS_TYPE.1=Zusatzverlust
