--- a/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
+++ b/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages.properties
@@ -61,6 +61,13 @@ WProfImportFilePage_0=Image Folder (Optional)
 KnaufProfileExportWizard.0=Failed to export WSPR file
 RightBank_0=Right Bank
 ProfilLayerProviderTuhh.3=Sinuosity
+org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.7=Energyloss
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.0=Energyloss
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.1=<Verlustbeiwert[-]>
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.2=Beschreibung der Verlustart
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.3=<Verlustart angeben>
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.4=Einlaufverlust
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.5=Einlaufverlustbeiwert wie er z.B. an Rohrleitungen auftritt
 SobekImportWizard.0=Import SOBEK data
 WProfOptionsPage_1=Creation Mode
 ProfilLayerProviderTuhh.0=Code
@@ -165,6 +172,7 @@ org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.6=Insert culvert
 TuhhResultDataElementLabelProvider_0=No results available...
 org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.5=Insert weir
 org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.4=Insert bridge
+org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.8=Insert energyloss
 org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.3=Insert roughness
 PlotterExportPage.2=Sleep Time may not be empty
 org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.2=Insert profile line
