--- a/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
+++ b/trunk/KalypsoModelWspmTuhhUI/src/org/kalypso/model/wspm/tuhh/ui/i18n/messages_de.properties
@@ -82,6 +82,13 @@ org.kalypso.model.wspm.tuhh.ui.panel.TrennerPanel.8=Lage der Trennfl\u00E4che \u
 org.kalypso.model.wspm.tuhh.ui.panel.TrennerPanel.5=Lage der Trennfl\u00E4che \u00E4ndern
 org.kalypso.model.wspm.tuhh.ui.panel.TrennerPanel.4=Vorland
 org.kalypso.model.wspm.tuhh.ui.panel.TrennerPanel.3=B\u00F6schungsfu\u00DF
+org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.7=Energieverluste
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.0=Energieverluste
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.1=<Verlustbeiwert[-]>
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.2=Beschreibung der Verlustart
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.3=<Verlustart angeben>
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.4=Einlaufverlust
+org.kalypso.model.wspm.tuhh.ui.panel.EnergylossPanel.5=Einlaufverlustbeiwert wie er z.B. an Rohrleitungen auftritt
 RoughnessFactorPage.0=Rauheitsfaktor
 org.kalypso.model.wspm.tuhh.ui.panel.TrennerPanel.0=Trennfl\u00E4chen
 org.kalypso.model.wspm.tuhh.ui.rules.RuecksprungRule.4=Senkrechte Wand bei Breite %s [m]
@@ -166,6 +173,7 @@ TuhhResultDataElementLabelProvider_0=Keine Ergebnisse verf\u00FCgbar...
 org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.5=Wehr einf\u00FCgen
 org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.4=Br\u00FCcke einf\u00FCgen
 org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.3=Rauheiten einf\u00FCgen
+org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.8=Energieverluste einf\u00FCgen
 PlotterExportPage.2=Wartezeit' darf nicht leer sein
 org.kalypso.model.wspm.tuhh.ui.chart.ProfilLayerProviderTuhh.2=Profillinie einf\u00FCgen
 PlotterExportPage.1=Wartezeit [ms] zwischen zwei Druckauftr\u00E4gen. Geben Sie l\u00E4ngere Wartezeiten ein, wenn der Druck vieler gleichzeitiger Druckauftr\u00E4ge fehlschl\u00E4gt.
