--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -180,9 +180,9 @@ ImportTimeseriesOperation_3=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2
 ImportTimeseriesOperation_4=Importiere Zeitreihe Verarbeitung fehlgeschlagen \u2013 Fehlerhafter Zeitschritt.
 ImportTimeseriesOperation_5=Importiere Zeitreihe Verarbeitung
 ImportTimeseriesOperation_6=Fehler bei \u00DCberpr\u00FCfung des Zeitschritts.
-ImportTimeseriesOperation_7=R\u00FCcksprung wurde festgestellt - %s.
-ImportTimeseriesOperation_8=Keine R\u00FCckspr\u00FCnge wurden festgellt.
-ImportTimeseriesOperation_9=Fehler in R\u00FCcksprung-Detektion
+ImportTimeseriesOperation_7=Zeitlicher Rücksprung bei %s.
+ImportTimeseriesOperation_8=Keine zeitliche R\u00FCckspr\u00FCnge.
+ImportTimeseriesOperation_9=Fehler in zeitlicher R\u00FCcksprung-Detektion
 KalypsoModuleRRM_0=Altprojekte importieren
 KalypsoNAMappingData.0=Kein Shapedatei geladen
 KalypsoNAMappingData.1=Lade Shapedatei
