More work on calibration task

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/catalog/templatemessages_de.properties
@@ -44,4 +44,13 @@ rhbchannel.modelConstruction.gft.group.additonalOutflow=zusätzliche Abgabe (opti
 catchment.modelConstruction.gft.group.groundwaterOutflow=Grundwasser Abgabe
 catchment.modelConstruction.gft.group.tiefenGW=Tiefengrundwasser
 
+editCalibration.gft.group.catchment.correctionFactor=Korrekturfaktoren
+editCalibration.gft.group.catchment.soilFactors=Korrektur Bodenparameter
+editCalibration.gft.group.catchment.retention=Retention und Translation
+
 editCalibration.gft.group.calibrationParameters=Kalibrierungsparameter
+editCalibration.gft.group.initialConditions=Anfangsbedingungen
+editCalibration.gft.group.initialConditions.description=Nur bei Simulationen ohne Anfangswerte aus einer Langzeitsimulation
+
+editCalibration.gft.label.factor=Faktor
+editCalibration.gft.label.baseValue=Basiswert
