CLOSED - # 57: Bei den Hydrotoptabellen sollte der 'Name' angezeigt werden https://dev.bjoernsen.de/hydrology/ticket/57

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -393,7 +393,8 @@ SetBasicModelDelegate.6=See Details\:
 SnowTaskHandler_0=Snow Types
 SoilTaskHandler_0=Layers
 SoilTaskHandler_1=Profiles
-SourceMappingComposite_0=-no shape selected-
+SourceMappingComposite_0=- no shape selected -
+SourceMappingComposite_1=- do not import -
 StationComposite_0=Station name contains invalid chars
 StationComposite_1=Station name already exists
 StationUiHandler_0=Station
