--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -396,7 +396,8 @@ SetBasicModelDelegate.6=Siehe Details\:
 SnowTaskHandler_0=Schneearten
 SoilTaskHandler_0=Horizonte
 SoilTaskHandler_1=Profile
-SourceMappingComposite_0=-Kein Shape geladen-
+SourceMappingComposite_0=- kein Shape geladen -
+SourceMappingComposite_1=- nicht importieren -
 StationComposite_0=Stationsname enth\u00E4lt ung\u00FCltige Zeichen
 StationComposite_1=Stationsname bereits vorhanden
 StationUiHandler_0=Station
