--- a/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
+++ b/trunk/KalypsoModelNA/etc/schema/gml/parameter_de.properties
@@ -44,8 +44,8 @@ rrmParam_Snow_rrmParam_xwwo_label=Neuschneedichte
 rrmParam_Snow_rrmParam_xwwo_tooltip=Wasseranteil im Schnee [-] (\= 0-1)
 rrmParam_SoilLayerParameter_description=SoilLayerParameter
 rrmParam_SoilLayerParameter_label=SoilLayerParameter
-rrmParam_SoilLayerParameter_rrmParam_soilLayerLink_label=Bodenart (Link)
-rrmParam_SoilLayerParameter_rrmParam_soilLayerLink_tooltip=Link zur Bodenart
+rrmParam_SoilLayerParameter_rrmParam_soilLayerLink_label=Bodenhorizont
+rrmParam_SoilLayerParameter_rrmParam_soilLayerLink_tooltip=Verweis auf den Bodenhorizont
 rrmParam_SoilLayerParameter_rrmParam_xret_label=Interflow
 rrmParam_SoilLayerParameter_rrmParam_xret_tooltip=Auswahl Interflow
 rrmParam_SoilLayerParameter_rrmParam_xtief_label=M\u00E4chtigkeit
