--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -214,6 +214,7 @@ KalypsoNAProjectWizard_5=Failed to write model files
 KalypsoNAProjectWizard_6=Failed to write model files
 KalypsoNAProjectWizard_7=Unknown channel type\: %d. Valid values are 0,1 or 2.
 KalypsoNAProjectWizard_9=Unable to map value '%s' to property '%s' of type '%s'.
+KalypsoNAProjectWizard_10=Layer %d
 KalypsoNAProjectWizardPage.BrowseButtonText=Browse...
 KalypsoNAProjectWizardPage.BrowseText=Choose a ESRI-Shape File\:
 KalypsoNAProjectWizardPage.CRSLabelText=Coordinate System
