--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -217,6 +217,7 @@ KalypsoNAProjectWizard_5=Fehler beim Schreiben der Modelldaten
 KalypsoNAProjectWizard_6=Fehler beim Schreiben der Modelldaten
 KalypsoNAProjectWizard_7=Unbekannter Strangtyp\: %d. G\u00FCltige Werte sind 0, 1, 2
 KalypsoNAProjectWizard_9=Fehler bei der Zuordnung von Wert '%s' zur Eigenschaft '%s' von Typ '%s'.
+KalypsoNAProjectWizard_10=Schicht %d
 KalypsoNAProjectWizardPage.BrowseButtonText=Durchsuchen...
 KalypsoNAProjectWizardPage.BrowseText=W\u00E4hlen Sie eine ESRI-Shapedatei aus\:
 KalypsoNAProjectWizardPage.CRSLabelText=Koordinatensystem\:
