--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -151,23 +151,23 @@ HydrotopesTaskHandler_1=Landnutzung
 HydrotopesTaskHandler_2=Geologie
 HydrotopesTaskHandler_3=Pedologie
 HydrotopesTaskHandler_4=Hydrotope
-IdwFactorsOperation.0=Erzeugt durch Inverse Distanz Gewichtung (%d)
-IdwFactorsOperation_0=Berechne Inverse Distanz Gewichtungs-Faktoren
-IdwFactorsOperation_1=Speiche Wizard Daten...
-IdwFactorsOperation_2=Lade Daten f\u00FCr Inverse Distanz Gewichtungs-Faktoren...
-IdwFactorsOperation_3=Berechne Inverse Distanz Gewichtungs-Faktoren
-IdwFactorsOperation_4=Fehler beim Berechnen der Inverse Distanz Gewichtungs-Faktoren f\u00FCr Einzugsgebiet '%s'
-IdwFactorsOperation_5=Die maximale Anzahl von Stationen ist null oder 0.
+IdwFactorsOperation_0=Erzeugt durch Inverse Distanz Gewichtung (%d)
+IdwFactorsOperation_1=Berechne Inverse Distanz Gewichtungs-Faktoren
+IdwFactorsOperation_2=Speiche Wizard Daten...
+IdwFactorsOperation_3=Lade Daten f\u00FCr Inverse Distanz Gewichtungs-Faktoren...
+IdwFactorsOperation_4=Berechne Inverse Distanz Gewichtungs-Faktoren
+IdwFactorsOperation_5=Fehler beim Berechnen der Inverse Distanz Gewichtungs-Faktoren f\u00FCr Einzugsgebiet '%s'
+IdwFactorsOperation_6=Die maximale Anzahl von Stationen ist null oder 0.
 IdwGeneratorWizard_1=Inverse Distanz Gewichtungs-Verfahren
 IdwGeneratorWizard_2=Bitte w\u00E4hlen Sie die Zeitreihe, die benutzt werden soll, um das Einzugsgebiet zu erzeugen.
-IdwOptionsLayoutPart.0=^Erzeugt durch Inverse Distanz Gewichtungs-Verfahren \\(([0-9]+)\\).*$
-IdwOptionsLayoutPart_0=Optionen f\u00FCr Inverse Distanz Gewichtung
-IdwOptionsLayoutPart_1=Anzahl von Stationen
-IdwOptionsLayoutPart_2=Maximale Stationen pro Einzugsgebiet
-IdwOptionsLayoutPart_3=Maximale Anzahl von Stationen
+IdwOptionsLayoutPart_0=^Erzeugt durch Inverse Distanz Gewichtungs-Verfahren \\(([0-9]+)\\).*$
+IdwOptionsLayoutPart_1=F\u00FCr Inverse Distanz Gewichtung verwendete Optionen
+IdwOptionsLayoutPart_2=Max. Stationen
+IdwOptionsLayoutPart_3=Maximale Stationen pro Einzugsgebiet
+IdwOptionsLayoutPart_4=Maximale Anzahl von Stationen
+IdwOptionsLayoutPart_5=F\u00FCr Inverse Distanz Gewichtung verwendete Zeitreihen
 IdwWizardLayoutPart_0=Allgemeine Eigenschaften
-IdwWizardLayoutPart_1=Zeitreihe f\u00FCr Inverse Distanz Gewichtung
-IdwWizardLayoutPart_2=\u00C4nderung des Parameter-Typs \u00E4ndert Liste der Zeitreihe. Nicht gespeicherte \u00C4nderungen gehen verloren. Fortfahren?
+IdwWizardLayoutPart_1=\u00C4nderung des Parameter-Typs \u00E4ndert Liste der Zeitreihen. Nicht gespeicherte \u00C4nderungen gehen verloren. Fortfahren?
 ImportPedologyWizard.0=Es sind keine Bodentypen definiert. Import nicht m\u00F6glich.
 ImportTimeseriesAction_0=Zeitreihe importieren
 ImportTimeseriesAction_1=Importiere eine Zeitreihe aus Fremddaten und Zuweisung zur gew\u00E4hlten Station.
@@ -419,8 +419,8 @@ ThiessenFactorsOperation_4=Fehler bei der Berechnung der Thiessen Gewichtung f\u
 ThiessenGeneratorWizard_1=Thiessen Verfahren
 ThiessenGeneratorWizard_2=Bitte w\u00E4hlen Sie die Zeitreihe die als Grundlage zur Erzeugung des Gebietsmodells dienen soll.
 ThiessenWizardLayoutPart_0=Allgemeine Einstellungen
-ThiessenWizardLayoutPart_1=Zeitreihe verwendet f\u00FCr Thiessen
-ThiessenWizardLayoutPart_2=\u00C4nderung des Parameter-Typs \u00E4ndert Liste der Zeitreihe. Nicht gespeicherte \u00C4nderungen gehen verloren. Fortfahren?
+ThiessenWizardLayoutPart_1=F\u00FCr Thiessen verwendete Zeitreihen
+ThiessenWizardLayoutPart_2=\u00C4nderung des Parameter-Typs \u00E4ndert Liste der Zeitreihen. Nicht gespeicherte \u00C4nderungen gehen verloren. Fortfahren?
 TimeseriesBean_0=Datendatei fehlt
 TimeseriesBean_1=Verweis auf Daten nicht gesetzt
 TimeseriesBrowserSearchViewer_0=Station
