--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -148,23 +148,23 @@ HydrotopesTaskHandler_1=Landuse
 HydrotopesTaskHandler_2=Geology
 HydrotopesTaskHandler_3=Pedology
 HydrotopesTaskHandler_4=Hydrotopes
-IdwFactorsOperation.0=Created by Inverse Distance Weighting Method (%d)
-IdwFactorsOperation_0=Calculate inverse distance weighting factors
-IdwFactorsOperation_1=Saving wizard data...
-IdwFactorsOperation_2=Loading data for inverse distance weighting factors...
-IdwFactorsOperation_3=Calculating inverse distance weighting factors...
-IdwFactorsOperation_4=Failed to calculate inverse distance weights for catchment '%s (%s)'
-IdwFactorsOperation_5=The maximal number of stations to be used was null or zero...
+IdwFactorsOperation_0=Created by Inverse Distance Weighting Method (%d)
+IdwFactorsOperation_1=Calculate inverse distance weighting factors
+IdwFactorsOperation_2=Saving wizard data...
+IdwFactorsOperation_3=Loading data for inverse distance weighting factors...
+IdwFactorsOperation_4=Calculating inverse distance weighting factors...
+IdwFactorsOperation_5=Failed to calculate inverse distance weights for catchment '%s (%s)'
+IdwFactorsOperation_6=The maximal number of stations to be used was null or zero...
 IdwGeneratorWizard_1=Inverse Distance Weighting Method
 IdwGeneratorWizard_2=Please select the timeseries that should be used to generate the catchment model.
-IdwOptionsLayoutPart.0=^Created by Inverse Distance Weighting Method \\(([0-9]+)\\).*$
-IdwOptionsLayoutPart_0=Options used for Inverse Distance Weighting
-IdwOptionsLayoutPart_1=Number of stations
-IdwOptionsLayoutPart_2=The maximal number of stations to use pro catchment.
-IdwOptionsLayoutPart_3=Maximal number of stations to use
+IdwOptionsLayoutPart_0=^Created by Inverse Distance Weighting Method \\(([0-9]+)\\).*$
+IdwOptionsLayoutPart_1=Options used for Inverse Distance Weighting
+IdwOptionsLayoutPart_2=Number of stations
+IdwOptionsLayoutPart_3=The maximal number of stations to use pro catchment.
+IdwOptionsLayoutPart_4=Maximal number of stations to use
+IdwOptionsLayoutPart_5=Timeseries used for Inverse Distance Weighting
 IdwWizardLayoutPart_0=General Properties
-IdwWizardLayoutPart_1=Timeseries used for Inverse Distance Weighting
-IdwWizardLayoutPart_2=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
+IdwWizardLayoutPart_1=Changing the parameter type needs to update the list of timeseries. Unsaved changes will be lost. Continue?
 ImportPedologyWizard.0=No soil types defined in project. Import impossible.
 ImportTimeseriesAction_0=Import Timeseries
 ImportTimeseriesAction_1=Imports a timeseries from an external data source and adds it to the selected station.
