--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -406,7 +406,7 @@ StorageChannelValidator_3=Missing '%s' values in WVQ-Relationship
 StorageChannelValidator_4=An additional effluent (%s) has been set, but no corresponding discharge values have been defined in the WVQ-Relation.
 StorageChannelValidator_5=Additional discharge values (effluent %s) have been defined in the WVQ-Relation, but no corresponding target node has been set.
 StoreTimeseriesOperation.0=Import Timeseries Operation
-StoreTimeseriesOperation.1=Import timeseries operation failed. Timeseries of the same type (parameter, timestep, quality) already exists.
+StoreTimeseriesOperation.1=Timeseries of the same type (parameter, timestep, quality) already exists. Replaced old timeseries!
 TextSearchFilterControl_0=Search string
 ThiessenFactorsOperation.0=Created by Thiessen Method
 ThiessenFactorsOperation_0=Calculate thiessen factors
