--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -409,7 +409,7 @@ StorageChannelValidator_3=Keine Werte vom Typ '%s' in der WVQ-Beziehung definier
 StorageChannelValidator_4=Eine zus\u00E4tzliche Abgabe (%s) wurde angegeben, es fehlen aber enstpechende Abflusswerte in der WVQ-Beziehung.
 StorageChannelValidator_5=Es wurden zus\u00E4tzliche Abflusswerte (%s) in der WVQ-Beziehung definiert, der Abgabeknoten aber nicht angegeben.
 StoreTimeseriesOperation.0=Zeitreihenimport
-StoreTimeseriesOperation.1=Zeitreihenimport fehlgeschlagen. Zeitreihen der gleichen Art (Parameter, Zeitschritt, Bemerkung) existiert bereits.
+StoreTimeseriesOperation.1=Zeitreihen der gleichen Art (Parameter, Zeitschritt, Bemerkung) existiert bereits. Alte Zeitreihe wurde überschrieben!
 TextSearchFilterControl_0=Suchtext
 ThiessenFactorsOperation.0=Erzeugt durch Thiessen Verfahren
 ThiessenFactorsOperation_0=Berechne Thiessen Faktoren
