edit dialogs catchment models, finally...

--- a/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -138,9 +138,9 @@ ExtendTimeseriesAction_1=Gew\u00E4hlte Zeitreihe erweitern
 FeatureBean_0=Editiere Eigenschaften
 FeatureBeanWizardPage_0=Editiere Eigenschaften
 FeatureBeanWizardPage_1=\u00C4ndere Eigenschaften der gew\u00E4hlten Elemente.
-GeneratorUiHandler_0=Einzugsgebietmodell
-GlobalConversionData_0=Fehler beim Lesen der Modelldatei '%s'. Zuweisung der Einzugsgebietsmodelle der konvertieren Simulationen unm\u00F6glich\!
-GlobalConversionData_1=Fehler beim Speichern der Modelldatei '%s'. Zuweisung der Einzugsgebietsmodelle der konvertieren Simulationen unm\u00F6glich\!
+GeneratorUiHandler_0=Gebietsmodell
+GlobalConversionData_0=Fehler beim Lesen der Modelldatei '%s'. Zuweisung der Gebietsmodelle der konvertieren Simulationen unm\u00F6glich\!
+GlobalConversionData_1=Fehler beim Speichern der Modelldatei '%s'. Zuweisung der Gebietsmodelle der konvertieren Simulationen unm\u00F6glich\!
 GroupComposite_0=Name
 GroupUiHandler_0=<Standardgruppe>
 GroupUiHandler_1=Gruppe
