--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages.properties
@@ -71,7 +71,7 @@ CompleteNetElementsTaskHandler_2=Catchments
 DeleteGeneratorAction_0=Delete Catchment Model(s)
 DeleteGeneratorAction_1=Delete selected catchment model(s)
 DeleteGeneratorAction_2=Element contains no models
-DeleteGeneratorAction_3=Delete selected catchment model(s)? This operation cannot made undone\!
+DeleteGeneratorAction_3=Delete selected catchment models? This operation cannot made undone\!
 DeleteGeneratorAction_4=Delete catchment model '%s'? This operation cannot made undone\!
 DeleteStationAction_0=Delete Station
 DeleteStationAction_1=Delete selected station(s)
