--- a/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
+++ b/trunk/KalypsoUIRRM/src/org/kalypso/ui/rrm/internal/i18n/messages_de.properties
@@ -42,9 +42,9 @@ CatchmentBean_1=Die Summe der Faktoren (%d%%) darf nicht gr\u00F6\u00DFer 100 se
 CatchmentBean_2=Die Summe der Faktoren (%d%%) ist ungleich 100
 CatchmentBean_3=100 Prozent
 CatchmentModelBuilder_0=Erzeugt durch Altprojektimport
-CatchmentModelBuilder_1=Konvertiere Einzugsgebietmodell '%s' aus vorhandenen Zeitreihen-Referenzen
-CatchmentModelVerifier_0=\u00DCberpr\u00FCfe Einzugsgebietmodelle der Simulation\: '%s'...
-CatchmentModelVerifier_1=\u00DCberpr\u00FCfe Einzugsgebietmodelle der Simulation\: '%s'...
+CatchmentModelBuilder_1=Konvertiere Gebietsmodell '%s' aus vorhandenen Zeitreihen-Referenzen
+CatchmentModelVerifier_0=\u00DCberpr\u00FCfe Gebietsmodelle der Simulation\: '%s'...
+CatchmentModelVerifier_1=\u00DCberpr\u00FCfe Gebietsmodelle der Simulation\: '%s'...
 CatchmentModelVerifier_3=Der N-Generator lieferte null oder hatte keine Faktoren...
 CatchmentModelVerifier_4=Der E-Generator war null oder hatte
 CatchmentModelVerifier_5=Der T-Generator war null oder hatte
@@ -71,11 +71,11 @@ CleanSearchPanelAction_1=Sucheingaben zur\u00FCcksetzen
 CompleteNetElementsTaskHandler_0=Kalinin-Miljukov Strang
 CompleteNetElementsTaskHandler_1=Speicherstrang
 CompleteNetElementsTaskHandler_2=Einzugsgebiete
-DeleteGeneratorAction_0=L\u00F6sche Einzugsgebietmodell(e)
-DeleteGeneratorAction_1=L\u00F6sche ausgew\u00E4hlte Einzugsgebietmodell(e)
+DeleteGeneratorAction_0=L\u00F6sche Gebietmodell(e)
+DeleteGeneratorAction_1=L\u00F6sche ausgew\u00E4hlte Gebietmodell(e)
 DeleteGeneratorAction_2=Element enth\u00E4lt keine Modelle
-DeleteGeneratorAction_3=L\u00F6sche gew\u00E4hlte(s) Einzugsgebiet(e)? Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
-DeleteGeneratorAction_4=L\u00F6sche Einzugsgebiet '%s'? Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
+DeleteGeneratorAction_3=L\u00F6sche ausgew\u00E4hlte Gebietsmodelle? Die Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
+DeleteGeneratorAction_4=L\u00F6sche Gebietsmodell '%s'? Die Aktion kann nicht r\u00FCckg\u00E4ngig gemacht werden.
 DeleteStationAction_0=L\u00F6sche Station
 DeleteStationAction_1=L\u00F6sche gew\u00E4hlte Station(en)
 DeleteStationAction_2=Element enth\u00E4lt keine Stationen
@@ -91,7 +91,7 @@ EditCalibrationTaskHandler_1=Speicherstrang
 EditCalibrationTaskHandler_2=Einzugsgebiete
 EditGeneratorAction_0=Editiere
 EditGeneratorAction_1=Editiere die Eigenschaften des Generators
-EditLinearSumDialog_0=Editiere Einzugsgebietmodell
+EditLinearSumDialog_0=Editiere Gebietsmodell
 EditLinearSumDialog_10=Bemerkung
 EditLinearSumDialog_11=Faktor [%]
 EditLinearSumDialog_1=Generator
